kiali/ingressroute.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: kiali
  namespace: istio-system
spec:
  entryPoints:
    - web
    # - websecure
  routes:
    - kind: Rule
      match: Host(`kiali.izaakserver.com`)
      services:
        - kind: Service
          name: kiali
          namespace: istio-system
          port: 20001
  # tls:
  #   certResolver: default
